refactored various data_cleaning files

--- a/data_cleaning/pdf_to_csv.ipynb
+++ b/data_cleaning/pdf_to_csv.ipynb
@@ -32,72 +32,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>col1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>january_2017</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>february_2017</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            col1\n",
-       "0   january_2017\n",
-       "1  february_2017"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# importing list of file names\n",
-    "import pandas as pd\n",
-    "df = pd.read_csv('file_names.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
-    "csv_raw_file_list = pd.read_csv('csv_raw_file_list.csv', skiprows = 7, skipfooter = 2, header = None, engine = 'python' )\n",
-    "csv_raw_file_list.drop([0], axis = 1, inplace = True)\n",
-    "csv_raw_file_list[1] = csv_raw_file_list[1].apply(lambda x: x.split(' ')[1]) # remove the first part of the string"
+    "#\n",
+    "# def pdf_to_json(input_file, output_file):\n",
+    "#     import tabula\n",
+    "#     import json\n",
+    "#     tabula.convert_into(input_file, output_file, output_format=\"json\", pages=\"all\")\n",
+    "\n",
+    "# stores all tables in the pdf in a list as DataFrames\n",
+    "# tables = tabula.read_pdf(input_file, pages=\"all\", multiple_tables=True)\n",
+    "\n",
+    "# ------------------------------------------------------------------------------------\n",
+    "# converts a PDF file directly into a CSV\n",
+    "\n",
+    "# the first page in a PDF\n",
+    "# tabula.convert_into(file, \"pdf/doubleeyes.csv\")\n",
+    "\n",
+    "# all the pages in a PDF\n",
+    "# output_file = \"pdf_raw/OCTOBER%202020%20-%20NIV%20Issuances%20by%20Nationality%20and%20Visa%20Class.csv\"\n",
+    "# tabula.convert_into(input_file, output_file, pages=\"all\")\n",
+    "\n",
+    "# all the pages in all PDFs in a Directory\n",
+    "# tabula.convert_into_by_batch(\"/path/to/files\", output_format = csv, pages = \"all\")\n",
+    "\n",
+    "# ----------------------------------------------------------------------\n",
+    "# we can perform the same operation, except drop the files out to JSON instead, like below:\n",
+    "# tabula.convert_into_by_batch(\"/path/to/files\", output_format = \"json\", pages = \"all\")\n"
    ]
   }
  ],
