--- a/filter_for_app.ipynb
+++ b/filter_for_app.ipynb
@@ -1,25 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Filtering using boolean masks"
+   ]
   },
   {
    "cell_type": "code",
@@ -73,6 +59,63 @@
     "        return result\n",
     "\n",
     "    return filtering()  # returns a DataFrame\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Filtering II (Using index) : WIP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test input\n",
+    "returned_year = 'all'\n",
+    "returned_month = 'june'\n",
+    "returned_country = 'Japan'\n",
+    "returned_visa_type = 'F1'\n",
+    "date = f'{returned_year}-{returned_month}' # all months all years"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "master_df = pd.read_csv('data_cleaning/master_df.csv', index_col='date', parse_dates = True)\n",
+    "\n",
+    "master_df = master_df.reset_index().set_index(['date','country', 'visa_type'])\n",
+    "\n",
+    "# Handling for all options\n",
+    "\n",
+    "if returned_country == 'all':\n",
+    "    returned_country = slice(None) # equivalent of ':' for multiindex\n",
+    "if returned_visa_type == 'all':\n",
+    "    returned_visa_type = slice(None)\n",
+    "\n",
+    "# for specific year, but all months\n",
+    "if (returned_year != 'all') & (returned_month.lower() == 'all'):\n",
+    "    date = f'{returned_year}'\n",
+    "    # Actual filtering\n",
+    "\n",
+    "if (returned_year != 'all') & (returned_month == 'all'):\n",
+    "    result = master_df.loc[ (date, returned_country, returned_visa_type) ,:]\n",
+    "else:\n",
+    "    result = master_df.loc[ (slice(None), returned_country, returned_visa_type) ,:]\n",
+    "    # filtering my month by ignoring the year\n",
+    "    result = result.reset_index().set_index(['date'])\n",
+    "    import datetime\n",
+    "    month_name = returned_month[0:3]\n",
+    "    month_number = datetime.datetime.strptime(month_name, \"%b\").month\n",
+    "    result = result[result.index.month.isin([month_number])]\n",
+    "# WIP"
    ]
   }
  ],
