added github repo link

--- a/lists_for_app.ipynb
+++ b/lists_for_app.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,98 +61,294 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "returns = [countries, years, months, visa_types]\n",
+    "for returned in returns:\n",
+    "    print(type(returned[0]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['A1',\n",
-       " 'A2',\n",
-       " 'A3',\n",
-       " 'B1',\n",
-       " 'B1/B2',\n",
-       " 'B2',\n",
-       " 'BBBCC',\n",
-       " 'BBBCV',\n",
-       " 'C1',\n",
-       " 'C1/D',\n",
-       " 'C2',\n",
-       " 'C3',\n",
-       " 'CW1',\n",
-       " 'CW2',\n",
-       " 'D',\n",
-       " 'E1',\n",
-       " 'E2',\n",
-       " 'E2C',\n",
-       " 'E3',\n",
-       " 'E3D',\n",
-       " 'E3R',\n",
-       " 'F1',\n",
-       " 'F2',\n",
-       " 'G1',\n",
-       " 'G2',\n",
-       " 'G3',\n",
-       " 'G4',\n",
-       " 'G5',\n",
-       " 'H1B',\n",
-       " 'H1B1',\n",
-       " 'H1C',\n",
-       " 'H2A',\n",
-       " 'H2B',\n",
-       " 'H3',\n",
-       " 'H4',\n",
-       " 'I',\n",
-       " 'J1',\n",
-       " 'J2',\n",
-       " 'K1',\n",
-       " 'K2',\n",
-       " 'K3',\n",
-       " 'K4',\n",
-       " 'L1',\n",
-       " 'L2',\n",
-       " 'M1',\n",
-       " 'M2',\n",
-       " 'N8',\n",
-       " 'N9',\n",
-       " 'NATO1',\n",
-       " 'NATO2',\n",
-       " 'NATO4',\n",
-       " 'NATO5',\n",
-       " 'NATO6',\n",
-       " 'NATO7',\n",
-       " 'O1',\n",
-       " 'O2',\n",
-       " 'O3',\n",
-       " 'P1',\n",
-       " 'P2',\n",
-       " 'P3',\n",
-       " 'P4',\n",
-       " 'Q1',\n",
-       " 'R1',\n",
-       " 'R2',\n",
-       " 'S7',\n",
-       " 'T2',\n",
-       " 'T3',\n",
-       " 'T4',\n",
-       " 'T5',\n",
-       " 'T6',\n",
-       " 'TD',\n",
-       " 'TN',\n",
-       " 'U1',\n",
-       " 'U2',\n",
-       " 'U3',\n",
-       " 'U4',\n",
-       " 'U5',\n",
+       "['**Eswatini',\n",
+       " '*Non-Nationality Based Issuances',\n",
+       " '*Non-Nationlity Based Issuances',\n",
+       " '*Non-nationality based issuances',\n",
+       " 'Afghanistan',\n",
+       " 'Albania',\n",
+       " 'Algeria',\n",
+       " 'Andorra',\n",
+       " 'Angola',\n",
+       " 'Anguilla',\n",
+       " 'Antigua And Barbuda',\n",
+       " 'Antigua and Barbuda',\n",
+       " 'Argentina',\n",
+       " 'Armenia',\n",
+       " 'Australia',\n",
+       " 'Austria',\n",
+       " 'Azerbaijan',\n",
+       " 'Bahamas, The',\n",
+       " 'Bahrain',\n",
+       " 'Bangladesh',\n",
+       " 'Barbados',\n",
+       " 'Belarus',\n",
+       " 'Belgium',\n",
+       " 'Belize',\n",
+       " 'Benin',\n",
+       " 'Bermuda',\n",
+       " 'Bhutan',\n",
+       " 'Bolivia',\n",
+       " 'Bosnia and Herzegovina',\n",
+       " 'Bosnia-Herzegovina',\n",
+       " 'Botswana',\n",
+       " 'Brazil',\n",
+       " 'British National Overseas (Hong Kong) Passport',\n",
+       " 'British Virgin Islands',\n",
+       " 'Brunei',\n",
+       " 'Bulgaria',\n",
+       " 'Burkina Faso',\n",
+       " 'Burma',\n",
+       " 'Burundi',\n",
+       " 'Cabo Verde',\n",
+       " 'Cambodia',\n",
+       " 'Cameroon',\n",
+       " 'Canada',\n",
+       " 'Cayman Islands',\n",
+       " 'Central African Republic',\n",
+       " 'Chad',\n",
+       " 'Chile',\n",
+       " 'China - Mainland',\n",
+       " 'China - Taiwan',\n",
+       " 'China - mainland',\n",
+       " 'China-Taiwan',\n",
+       " 'China-mainland',\n",
+       " 'Colombia',\n",
+       " 'Comoros',\n",
+       " 'Congo, Democratic Republic of the',\n",
+       " 'Congo, Republic of the',\n",
+       " 'Costa Rica',\n",
+       " \"Cote D'Ivoire\",\n",
+       " \"Cote d'Ivoire\",\n",
+       " 'Croatia',\n",
+       " 'Cuba',\n",
+       " 'Curacao',\n",
+       " 'Cyprus',\n",
+       " 'Czech Republic',\n",
+       " 'Democratic Republic of the Congo',\n",
+       " 'Denmark',\n",
+       " 'Djibouti',\n",
+       " 'Dominica',\n",
+       " 'Dominican Republic',\n",
+       " 'Ecuador',\n",
+       " 'Egypt',\n",
+       " 'El Salvador',\n",
+       " 'Equatorial Guinea',\n",
+       " 'Eritrea',\n",
+       " 'Estonia',\n",
+       " 'Eswatini',\n",
+       " 'Ethiopia',\n",
+       " 'Federated States of Micronesia',\n",
+       " 'Fiji',\n",
+       " 'Finland',\n",
+       " 'France',\n",
+       " 'Gabon',\n",
+       " 'Gambia, The',\n",
+       " 'Georgia',\n",
+       " 'Germany',\n",
+       " 'Ghana',\n",
+       " 'Gibraltar',\n",
+       " 'Great Britain & Northern Ireland',\n",
+       " 'Great Britain and Northern Ireland',\n",
+       " 'Greece',\n",
+       " 'Grenada',\n",
+       " 'Guatemala',\n",
+       " 'Guinea',\n",
+       " 'Guinea - Bissau',\n",
+       " 'Guinea-Bissau',\n",
+       " 'Guyana',\n",
+       " 'Haiti',\n",
+       " 'Honduras',\n",
+       " 'Hong Kong S. A. R.',\n",
+       " 'Hong Kong S.A.R.',\n",
+       " 'Hungary',\n",
+       " 'Iceland',\n",
+       " 'India',\n",
+       " 'Indonesia',\n",
+       " 'Iran',\n",
+       " 'Iraq',\n",
+       " 'Ireland',\n",
+       " 'Israel',\n",
+       " 'Italy',\n",
+       " 'Jamaica',\n",
+       " 'Japan',\n",
+       " 'Jordan',\n",
+       " 'Kazakhstan',\n",
+       " 'Kenya',\n",
+       " 'Kiribati',\n",
+       " 'Korea, North',\n",
+       " 'Korea, South',\n",
+       " 'Kosovo',\n",
+       " 'Kuwait',\n",
+       " 'Kyrgyzstan',\n",
+       " 'Laos',\n",
+       " 'Latvia',\n",
+       " 'Lebanon',\n",
+       " 'Lesotho',\n",
+       " 'Liberia',\n",
+       " 'Libya',\n",
+       " 'Liechtenstein',\n",
+       " 'Lithuania',\n",
+       " 'Luxembourg',\n",
+       " 'Macau S. A. R.',\n",
+       " 'Macau S.A.R.',\n",
+       " 'Macedonia',\n",
+       " 'Madagascar',\n",
+       " 'Malawi',\n",
+       " 'Malaysia',\n",
+       " 'Maldives',\n",
+       " 'Mali',\n",
+       " 'Malta',\n",
+       " 'Marshall Islands',\n",
+       " 'Marshall Islands, Republic of the',\n",
+       " 'Mauritania',\n",
+       " 'Mauritius',\n",
+       " 'Mexico',\n",
+       " 'Micronesia',\n",
+       " 'Micronesia, Federated States of',\n",
+       " 'Moldova',\n",
+       " 'Monaco',\n",
+       " 'Mongolia',\n",
+       " 'Montenegro',\n",
+       " 'Montserrat',\n",
+       " 'Morocco',\n",
+       " 'Mozambique',\n",
+       " 'Namibia',\n",
+       " 'Nauru',\n",
+       " 'Nepal',\n",
+       " 'Netherlands',\n",
+       " 'New Zealand',\n",
+       " 'Nicaragua',\n",
+       " 'Niger',\n",
+       " 'Nigeria',\n",
+       " 'Non-Nationality Based Issuances',\n",
+       " 'Nonimmigrant Visa Issuances By Nationality -',\n",
+       " 'North Macedonia',\n",
+       " 'Norway',\n",
+       " 'Oman',\n",
+       " 'Pakistan',\n",
+       " 'Palau',\n",
+       " 'Palestinian Authority Travel Document',\n",
+       " 'Panama',\n",
+       " 'Papua New Guinea',\n",
+       " 'Paraguay',\n",
+       " 'Peru',\n",
+       " 'Philippines',\n",
+       " 'Poland',\n",
+       " 'Portugal',\n",
+       " 'Qatar',\n",
+       " 'Republic of Palau',\n",
+       " 'Republic of the Congo',\n",
+       " 'Romania',\n",
+       " 'Russia',\n",
+       " 'Rwanda',\n",
+       " 'Saint Kitts and Nevis',\n",
+       " 'Saint Lucia',\n",
+       " 'Saint Vincent and the Grenadines',\n",
+       " 'Samoa',\n",
+       " 'San Marino',\n",
+       " 'Sao Tome and Principe',\n",
+       " 'Saudi Arabia',\n",
+       " 'Senegal',\n",
+       " 'Serbia',\n",
+       " 'Seychelles',\n",
+       " 'Sierra Leone',\n",
+       " 'Singapore',\n",
+       " 'Slovakia',\n",
+       " 'Slovenia',\n",
+       " 'Solomon Islands',\n",
+       " 'Somalia',\n",
+       " 'South Africa',\n",
+       " 'South Sudan',\n",
+       " 'Spain',\n",
+       " 'Sri Lanka',\n",
+       " 'St Lucia',\n",
+       " 'St. Helena',\n",
+       " 'St. Kitts And Nevis',\n",
+       " 'St. Kitts and Nevis',\n",
+       " 'St. Vincent and The Grenadines',\n",
+       " 'St. Vincent and the Grenadines',\n",
+       " 'Sudan',\n",
+       " 'Sudan, South',\n",
+       " 'Suriname',\n",
+       " 'Swaziland',\n",
+       " 'Sweden',\n",
+       " 'Switzerland',\n",
+       " 'Syria',\n",
+       " 'Tajikistan',\n",
+       " 'Tanzania',\n",
+       " 'Thailand',\n",
+       " 'Timor-Leste',\n",
+       " 'Togo',\n",
+       " 'Tonga',\n",
+       " 'Trinidad and Tobago',\n",
+       " 'Tunisia',\n",
+       " 'Turkey',\n",
+       " 'Turkmenistan',\n",
+       " 'Turks And Caicos Islands',\n",
+       " 'Turks and Caicos Islands',\n",
+       " 'Tuvalu',\n",
+       " 'Uganda',\n",
+       " 'Ukraine',\n",
+       " 'United Arab Emirates',\n",
+       " 'Uruguay',\n",
+       " 'Uzbekistan',\n",
+       " 'Vanuatu',\n",
+       " 'Vatican City',\n",
+       " 'Venezuela',\n",
+       " 'Vietnam',\n",
+       " 'Western Sahara',\n",
+       " 'Yemen',\n",
+       " 'Zambia',\n",
+       " 'Zimbabwe',\n",
        " 'all']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "sorted(countries)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# there is a nan value in the countries column"
+   ]
   },
   {
    "cell_type": "code",
