restored master_df.csv, monthly_update.py draft1 complete

--- a/data_cleaning/data_cleaning_exceptions.ipynb
+++ b/data_cleaning/data_cleaning_exceptions.ipynb
@@ -9,12 +9,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# refactoring required\n",
-    "# run this after master_df"
+    "# updating module 2\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from download_and_clean import download_list\n",
+    "\n",
+    "for file_name in download_list:\n",
+    "    df = pd.read_csv(f'{file_name}')\n",
+    "\n",
+    "    df['country'] = df['country'].str.replace(\"Hong Kong S. A. R\", \"Hong Kong S.A.R\")\n",
+    "    df['country'] = df['country'].str.replace(\"China-Taiwan\", \"China - Taiwan\")\n",
+    "    df['country'] = df['country'].str.replace(\"China-mainland\", \"China - mainland\") # replacing 1 with 2\n",
+    "    df['country'] = df['country'].str.replace(\"China - Mainland\", \"China - mainland\") # replacing 3 with 2\n",
+    "    df['country'] = df['country'].str.title()\n",
+    "    df['country'] = df['country'].str.replace(\"Nationlity\", \"Nationality\")\n",
+    "\n",
+    "    df['country'] = np.where(df['country'] == \"Non-Nationality Based Issuances\" , \"*Non-Nationality Based Issuances\", df['country'])\n",
+    "    df = df[~df['country'].str.lower().str.contains(\" by \")]\n",
+    "    \n",
+    "    df.to_csv(f'{file_name}.csv')"
    ]
   },
   {
