--- a/data_cleaning/master_df.ipynb
+++ b/data_cleaning/master_df.ipynb
@@ -1,44 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 49,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['january_2021', 'february_2021']"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "download_list"
+    "### ACTUAL CODE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv('master_df.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -70,177 +41,60 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2017-03-01</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>A1</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2017-03-01</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>A2</td>\n",
-       "      <td>42</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2017-03-01</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>B1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2017-03-01</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>B1/B2</td>\n",
-       "      <td>87</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2017-03-01</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>F2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         date      country visa_type  number\n",
-       "0  2017-03-01  Afghanistan        A1      14\n",
-       "1  2017-03-01  Afghanistan        A2      42\n",
-       "2  2017-03-01  Afghanistan        B1       1\n",
-       "3  2017-03-01  Afghanistan     B1/B2      87\n",
-       "4  2017-03-01  Afghanistan        F2       1"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>country</th>\n",
-       "      <th>visa_type</th>\n",
-       "      <th>number</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>143511</th>\n",
-       "      <td>2020-11-01</td>\n",
-       "      <td>Zimbabwe</td>\n",
-       "      <td>G1</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>143512</th>\n",
-       "      <td>2020-11-01</td>\n",
+       "      <th>145909</th>\n",
+       "      <td>2020-12-01 00:00:00</td>\n",
        "      <td>Zimbabwe</td>\n",
        "      <td>G4</td>\n",
-       "      <td>19</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>143513</th>\n",
-       "      <td>2020-11-01</td>\n",
+       "      <th>145910</th>\n",
+       "      <td>2020-12-01 00:00:00</td>\n",
        "      <td>Zimbabwe</td>\n",
        "      <td>J1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>143514</th>\n",
-       "      <td>2020-11-01</td>\n",
+       "      <th>145911</th>\n",
+       "      <td>2020-12-01 00:00:00</td>\n",
        "      <td>Zimbabwe</td>\n",
        "      <td>J2</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>143515</th>\n",
-       "      <td>2020-11-01</td>\n",
+       "      <th>145912</th>\n",
+       "      <td>2020-12-01 00:00:00</td>\n",
        "      <td>Zimbabwe</td>\n",
-       "      <td>K1</td>\n",
-       "      <td>3</td>\n",
+       "      <td>L1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145913</th>\n",
+       "      <td>2020-12-01 00:00:00</td>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>P1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              date   country visa_type  number\n",
-       "143511  2020-11-01  Zimbabwe        G1      10\n",
-       "143512  2020-11-01  Zimbabwe        G4      19\n",
-       "143513  2020-11-01  Zimbabwe        J1       2\n",
-       "143514  2020-11-01  Zimbabwe        J2       3\n",
-       "143515  2020-11-01  Zimbabwe        K1       3"
+       "                       date   country visa_type  number\n",
+       "145909  2020-12-01 00:00:00  Zimbabwe        G4       5\n",
+       "145910  2020-12-01 00:00:00  Zimbabwe        J1       1\n",
+       "145911  2020-12-01 00:00:00  Zimbabwe        J2       3\n",
+       "145912  2020-12-01 00:00:00  Zimbabwe        L1       1\n",
+       "145913  2020-12-01 00:00:00  Zimbabwe        P1       1"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.tail()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "december_2020.csv not found\n",
-      "january_2021.csv not found\n",
-      "february_2021.csv not found\n"
-     ]
-    }
-   ],
-   "source": [
-    "for file_name in download_list:\n",
-    "    try:\n",
-    "        monthly_df = pd.read_csv(f'csv_clean/{file_name}.csv')  # read csv file\n",
-    "        monthly_df['date'] = file_name.replace('_', '-')  # create a column:date, replace _ with -\n",
-    "        monthly_df['date']= pd.to_datetime(monthly_df['date'])  # convert column:date to Datatype: DateTime\n",
-    "        monthly_df.set_index('date', inplace = True) # set column:date as Index\n",
-    "        df = df.append(monthly_df)\n",
-    "    except:\n",
-    "        print(f'{file_name}.csv not found')"
+    "pd.read_csv('master_df.csv').tail()"
    ]
   }
  ],
