updated for Dec2020 with some changes to code base

--- a/data_cleaning/Untitled.ipynb
+++ b/data_cleaning/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,138 +12,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_name = 'master_df'"
+    "df = pd.read_csv('master_df.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(f'{file_name}.csv')\n",
-    "\n",
-    "df['country'] = df['country'].str.replace(\"Hong Kong S. A. R\", \"Hong Kong S.A.R\")\n",
-    "df['country'] = df['country'].str.replace(\"China-Taiwan\", \"China - Taiwan\")\n",
-    "df['country'] = df['country'].str.replace(\"China-mainland\", \"China - mainland\")  # replacing 1 with 2\n",
-    "df['country'] = df['country'].str.replace(\"China - Mainland\", \"China - mainland\")  # replacing 3 with 2\n",
-    "df['country'] = df['country'].str.title()\n",
-    "df['country'] = df['country'].str.replace(\"Nationlity\", \"Nationality\")\n",
-    "\n",
+    "df['country'] = df['country'].str.title()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "replace_dict = {\n",
+    "    \"Bosnia-Herzegovina\": \"Bosnia And Herzegovina\",\n",
+    "    \"China-mainland\": \"China - Mainland\",\n",
+    "    \"China-Taiwan\": \"China - Taiwan\",\n",
+    "    \"Congo, Republic Ff The\": \"Republic Of The Congo\",\n",
+    "    \"Congo, Democratic Republic Of The\": \"Democratic Republic Of The Congo\",\n",
+    "    \"\\**Eswatini\": \"Eswatini\",\n",
+    "    \"Great Britain & Northern Ireland\": \"Great Britain And Northern Ireland\",\n",
+    "    \"Hong Kong S. A. R\": \"Hong Kong S.A.R\",\n",
+    "    \"Macau S. A. R.\" : \"Macau S.A.R.\",\n",
+    "    \"Marshall Islands, Republic Of The\": \"Marshall Islands\",\n",
+    "    \"Micronesia, Federated States Of\": \"Micronesia\",\n",
+    "    \"Nationlity\": \"Nationality\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for key, value in replace_dict.items():\n",
+    "    df['country'] = df['country'].str.replace(key, value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df['country'] = np.where(df['country'] == \"Non-Nationality Based Issuances\", \"*Non-Nationality Based Issuances\",\n",
-    "                         df['country'])\n",
-    "df = df[~df['country'].str.lower().str.contains(\" by \")]\n",
-    "df.set_index('date')\n",
-    "\n",
-    "df.to_csv(f'{file_name}.csv')"
+    "                             df['country'])"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>date</th>\n",
-       "      <th>country</th>\n",
-       "      <th>visa_type</th>\n",
-       "      <th>number</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2017-03-01</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>A1</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2017-03-01</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>A2</td>\n",
-       "      <td>42</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2017-03-01</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>B1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2017-03-01</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>B1/B2</td>\n",
-       "      <td>87</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>2017-03-01</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>F2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Unnamed: 0        date      country visa_type  number\n",
-       "0           0  2017-03-01  Afghanistan        A1      14\n",
-       "1           1  2017-03-01  Afghanistan        A2      42\n",
-       "2           2  2017-03-01  Afghanistan        B1       1\n",
-       "3           3  2017-03-01  Afghanistan     B1/B2      87\n",
-       "4           4  2017-03-01  Afghanistan        F2       1"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df.head()"
+    "# CAREFUL"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.set_index('date').to_csv('master_df.csv')"
+   ]
   }
  ],
  "metadata": {
